# LudumDare54

./: Cargo.toml  README.md  index.html  ludum_dare_54.d.ts  ludum_dare_54.js  ludum_dare_54_bg.wasm.d.ts
assets/: wall.glb
assets/levels/: level_00.ron  level_01.ron  level_02.ron  level_03.ron  main_menu.ron  test.ron
assets/models/: belt.glb  beltL.glb  beltR.glb  cube.glb  cubeB.glb  cubeG.glb  cubeP.glb  cubeY.glb  door.glb  floor.glb  inoutB.glb  inoutG.glb  inoutP.glb  inoutY.glb  input.glb  loadingbay.glb  output.glb  wall.glb
html/: README.md  index.html
src/: camera.rs  cubes.rs  game.rs  level.rs  levels.rs  load.rs  main.rs  objects.rs  ui.rs
