[package]
name = "ludum_dare_54"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy_mod_picking = { version = "0.15.0", default-features = false, features = ["backend_raycast", "highlight"] }
bevy = "0.11.3"
bevy_common_assets = { version = "0.7.0", features = ["ron"] }
bevy_easings = "0.11.1"
serde = "1.0.188"
